--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "1.3.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "16.0.3",
     "express": "4.18.2",
-    "pg": "^8.10.0"
+    "pg": "8.10.0"
   }
 }
